odc_eks/modules/eks/lb_sg.tf
resource "aws_security_group" "eks_lb" {
  name        = "${var.cluster_id}-lb-sg"
  description = "Security group for eks load balancers"
  vpc_id      = var.vpc_id

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    {
      Name = "${var.cluster_id}-lb-sg"
      owner = var.owner
      namespace = var.namespace
      environment = var.environment
    },
    var.tags
  )
}
